# ModelHub

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
gateway/: Dockerfile  nginx.conf
mlflow-server/: Dockerfile
monitoring/grafana/provisioning/dashboards/: api_metrics.json  dashboard.yml
monitoring/prometheus/: prometheus.yml
scripts/: init_db.sql  simulate_traffic.py
serving/: Dockerfile  requirements.txt
serving/models/: .gitkeep
serving/src/: ab_router.py  database.py  main.py  metrics.py  model_loader.py  models.py
serving/tests/: conftest.py  test_ab_router.py  test_api.py  test_prediction.py
training/: Dockerfile  requirements.txt
training/config/: base_config.yaml
training/notebooks/: 01_eda.ipynb
training/src/: __init__.py  data_loader.py  evaluate.py  feature_engineering.py  register_model.py  train.py  utils.py
training/tests/: test_data_loader.py  test_features.py  test_train.py
