[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
  "E501",   # line too long (handled by black)
  "B008",   # do not perform function calls in default arguments
  "N806",   # uppercase variable in function — ML convention (X_train, X_test)
  "N803",   # uppercase argument name — ML convention (X)
  "N802",   # function name should be lowercase — ML convention (X_y fixture)
  "SIM108", # use ternary operator — not always clearer
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["training/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.coverage.run]
source = ["training/src"]
omit = ["*/tests/*", "*/__init__.py"]
